genesis block created

--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
   "scripts": {
     "start": "babel-node index",
     "nodemon": "nodemon --exec yarn start",
-    "lint": "eslint index.js"
+    "lint": "eslint index.js src"
   }
 }
